--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+
+}
 nav{
   background-color: aquamarine;
+  padding: 30px;
+}
+ul{
+  list-style: none;
+  float: right;
+  margin-top: 0;
+}
+ul li{
+  display: inline-block;
+  margin-right: 20px;
+}
+ul li a{
+  text-decoration: none;
+  text-transform: uppercase;
+  
 }
